--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,19 +3,19 @@ services:
     build:
       context: ./api
       dockerfile: Dockerfile
-    # networks:
-    #   - backend
+    networks:
+      - backend
     ports:
       - '8000:8000'
     volumes:
       - ./api:/api
-    # environment:
-    #   - POSTGRES_HOST=postgres
-    #   - POSTGRES_DB=mydatabase
-    #   - POSTGRES_USER=myuser
-    #   - POSTGRES_PASSWORD=mypassword
-    # depends_on:
-    #   - postgres
+    environment:
+      - POSTGRES_HOST=postgres
+      - POSTGRES_DB=mydatabase
+      - POSTGRES_USER=myuser
+      - POSTGRES_PASSWORD=mypassword
+    depends_on:
+      - postgres
     stdin_open: true
     tty: true
 
@@ -31,20 +31,20 @@ services:
     stdin_open: true
     tty: true
 
-#   postgres:
-#     image: postgres:latest
-#     networks:
-#       - backend
-#     environment:
-#       - POSTGRES_DB=mydatabase
-#       - POSTGRES_USER=myuser
-#       - POSTGRES_PASSWORD=mypassword
-#     volumes:
-#       - postgres_data:/var/lib/postgresql/data
+  postgres:
+    image: postgres:latest
+    networks:
+      - backend
+    environment:
+      - POSTGRES_DB=mydatabase
+      - POSTGRES_USER=myuser
+      - POSTGRES_PASSWORD=mypassword
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
 
-# networks:
-#   backend:
-#     driver: bridge
+networks:
+  backend:
+    driver: bridge
 
-# volumes:
-#   postgres_data:
+volumes:
+  postgres_data:
