--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -38,7 +38,7 @@ http {
 
        # Configuración de Reverse Proxy
         location /testAPI {
-            proxy_pass http://172.25.0.52:8000
+            proxy_pass http://172.25.0.89:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
