--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,7 @@ services:
       dockerfile: Dockerfile
     networks:
       - backend
+      - frontend
     ports:
       - '8000:8000'
     volumes:
@@ -28,6 +29,8 @@ services:
     volumes:
       - ./client/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./client:/client
+    networks:
+      - frontend
     stdin_open: true
     tty: true
 
@@ -44,6 +47,8 @@ services:
 
 networks:
   backend:
+    driver: bridge
+  frontend:
     driver: bridge
 
 volumes:
